welcome.lessons.welcome.array.basics.Array1.scala.code
def peindreSol(c: Color) {
	setCouleurBrosse(c)
  
  baisseBrosse()
  leveBrosse()
}

def peindreMotif(couleurs: Array[Color]) {
  for (i <- couleurs) {
    peindreSol(couelurs)
    
    avance()
  }
}

override def run() {
  var hauteurMonde:Int = getMondeHauteur()
  var largeurMonde:Int = getMondeLargeur()
  
  var couleurs = new Array[Color](hauteurMonde)
  
  for (i <- 0 to hauteurMonde - 1) {
    couleurs(i) = getCouleurSol()
    
    avance()
  }
  
  recule(hauteurMonde - 1)
  
  droite()
  avance()
  gauche()
  avance()
  
  // On peint le sol.
  for (i <- 1 to largeurMonde) {
    peindreMotif(couleurs)
    
    droite()
  	avance()
  	gauche()
  	avance()
  }
}